--- a/gb/21/10/8/n13290699.md
+++ b/gb/21/10/8/n13290699.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bggrdk323/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/bggrdk323/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/bggrdk323/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bggrdk323/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/bggrdk323/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bggrdk323/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/bggrdk323/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bggrdk323/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/bggrdk323/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bggrdk323/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/bggrdk323/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bggrdk323/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/bggrdk323/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bggrdk323/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/bggrdk323/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bggrdk323/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/bggrdk323/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bggrdk323/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/bggrdk323/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bggrdk323/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bggrdk323/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bggrdk323/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bggrdk323/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bggrdk323/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>悉尼半数以上学区房价格上涨率达两位数</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13292705-dff48ff355b575a263a923fe9a3114f0-600x400.jpg" />
 <h6>北海滩的Barrenjoey中学学区房价上涨最强劲，房价年度同比增长45%，即增长了87万澳元，中位数达到2,802,500澳元。（Google地图截图）
 </h6>
 <hr>
-<p>【大纪元2021年10月09日讯】（大纪元记者朱丽娅悉尼编译报导）最新数据显示，<ahref="https://github.com/bggrdk323/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC%E6%88%BF%E5%9C%B0%E4%BA%A7%E5%B8%82%E5%9C%BA.md#1">悉尼房地产市场</a>的飙升使得一些<ahref="https://github.com/bggrdk323/djy/blob/master/gb/tag/%E5%AD%A6%E5%8C%BA.md#1">学区</a>的<ahref="https://github.com/bggrdk323/djy/blob/master/gb/tag/%E6%88%BF%E4%BB%B7.md#1">房价</a>在一年时间内跃升了40%以上。</p>
-<p>据澳洲Domain房地产网消息，最近发布的年度<ahref="https://github.com/bggrdk323/djy/blob/master/gb/tag/%E5%AD%A6%E5%8C%BA.md#1">学区</a>房报告（Domain School Zones Report），大悉尼地区70多个<ahref="https://github.com/bggrdk323/djy/blob/master/gb/tag/%E5%85%AC%E7%AB%8B%E5%AD%A6%E6%A0%A1.md#1">公立学校</a>学区的<ahref="https://github.com/bggrdk323/djy/blob/master/gb/tag/%E6%88%BF%E4%BB%B7.md#1">房价</a>在截至7月的年度内跃升了20%以上，其它140多个学区的房价中位数至少增长了10%。</p>
+<p>【大纪元2021年10月09日讯】（大纪元记者朱丽娅悉尼编译报导）最新数据显示，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC%E6%88%BF%E5%9C%B0%E4%BA%A7%E5%B8%82%E5%9C%BA.md#1">悉尼房地产市场</a>的飙升使得一些<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E5%8C%BA.md#1">学区</a>的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%88%BF%E4%BB%B7.md#1">房价</a>在一年时间内跃升了40%以上。</p>
+<p>据澳洲Domain房地产网消息，最近发布的年度<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E5%8C%BA.md#1">学区</a>房报告（Domain School Zones Report），大悉尼地区70多个<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%AC%E7%AB%8B%E5%AD%A6%E6%A0%A1.md#1">公立学校</a>学区的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%88%BF%E4%BB%B7.md#1">房价</a>在截至7月的年度内跃升了20%以上，其它140多个学区的房价中位数至少增长了10%。</p>
 <p>北海滩的Barrenjoey中学学区房价上涨最强劲，房价年度同比增长45%，即增长了87万澳元，中位数达到2,802,500澳元。</p>
-<p>由于悉尼人在中共病毒大流行期间涌向沿海城区，附近的Newport<ahref="https://github.com/bggrdk323/djy/blob/master/gb/tag/%E5%85%AC%E7%AB%8B%E5%AD%A6%E6%A0%A1.md#1">公立学校</a>学区和中央海岸的Woy Woy公立学校学区的房价也提升了至少40%。Cronulla中学和附近的Burraneer Bay公立学校学区的房价攀升速度比Cronulla区的整体水平几乎快10倍。</p>
+<p>由于悉尼人在中共病毒大流行期间涌向沿海城区，附近的Newport<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%AC%E7%AB%8B%E5%AD%A6%E6%A0%A1.md#1">公立学校</a>学区和中央海岸的Woy Woy公立学校学区的房价也提升了至少40%。Cronulla中学和附近的Burraneer Bay公立学校学区的房价攀升速度比Cronulla区的整体水平几乎快10倍。</p>
 <p>Domain的经济研究主管Nicola Powell称，过去的一年里，由于买家更加重视他们的住宅，并不再优先考虑靠近市中心的区，对有优越生活方式位置的需求急剧上升。然而，学区的分布也影响了房价的上涨，大约三分之一的学区房价涨幅超过了其所在区的房价涨幅至少10%。</p>
 <p>“房价上涨甚至在相邻的学区之间也有差异。”Powell举例说，Balgowlah Heights公立学校学区的房价上涨了33%，而相邻的Manly West公立学校学区则下降了约8%。</p>
 <p>总的来说，约有40%的学区表现优于其所在区的整体水平，其中中学学区（95%）比小学学区（89%）的增长比例更大，这与去年小学学区领先的情况相反。</p>
@@ -35,46 +35,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/8/n13290695.md#1">五分之三房产投资者认为 现在是入市好时机</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/7/n13289318.md#1">澳洲住宅房产5个月内增值1万亿澳元</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/7/n13287911.md#1">中资持有过2%澳洲农地 尚不足影响经济</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/7/n13287687.md#1">商业房产与住宅房产投资的区别</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/7/n13287650.md#1">全澳房产周转率达 到近12年来最高水平</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/4/n13279729.md#1">维州地产商Villawood进驻南澳 开发Oakden大型社区</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/4/n13279335.md#1">专家预判 澳洲未来五年十大房市趋势</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/1/n13273764.md#1">CoreLogic：过去一年澳洲房价激增逾20%</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/1/n13273064.md#1">分析：澳过半家庭房贷过重 一旦加息恐陷困境</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613475.md#1">澳洲哪些偏远城镇更受大城市人青睐</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613550.md#1">如何在悉尼建造理想Duplex？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13612432.md#1">全澳二月房价增长放缓 悉尼两年来首次下跌</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609571.md#1">阿德莱德北区成外州买家新宠</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13604667.md#1">堪培拉出租房紧缺 房租上涨 租客压力倍增</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/21/n13593960.md#1">预计2022年价格大涨的实惠郊区</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/20/n13591481.md#1">重开国境 悉尼公寓房涨幅或将超过独立房</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13603883.md#1">大悉尼委员会拟改政策 更多工业用地可建住宅</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/24/n13601921.md#1">堪培拉公寓与独立房价格差距全澳最大</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/24/n13603075.md#1">房价高企 70%在售房产澳中等收入者买不起</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/3/n10612921.md#1" target="_blank">炮灰与英雄——中美韩战军人的命运</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/22/n11340432.md#1" target="_blank">美国务院年度报告 批中共严重打压宗教自由</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10069025.md#1" target="_blank">杨宁：八路军为何大量购买治花柳病的药品？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/23/n10871086.md#1" target="_blank">绝处逢生 大陆法轮功学员谢师恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/1/n13275161.md#1">【百年真相】耀眼明星的陨落 上官云珠坠楼真相</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/7/n13289075.md#1">【百年真相】 骇世惊俗的告白 瞿秋白《多余的话》</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/9/30/n13272470.md#1">璎珞：自佛国而来，尘世间最美的项链</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/1/n13275150.md#1">【未解之谜】轮回记忆揭秘 考古界未解难题</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/3/n13277822.md#1">3岁儿子自称前世死于车祸 美国妈妈被吓到</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/9/n13291946.md#1">车评：双马达混能 2021 Toyota RAV4 Hybrid Limited</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/8/n13291720.md#1">【远见快评】长津湖掀文字狱 中共两大谎言</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/8/n13291460.md#1">【拍案惊奇】习对台军事加压？CIA招中文特工</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/7/n13286747.md#1">【独家】十一急电泄中共准备处置突发疫情</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/7/n13287990.md#1">【中国观察】北京是否将要重返毛时代</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/7/n13288961.md#1">与杨洁篪会谈六小时后 沙利文首发声</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/6/n13286296.md#1">为何愿意前夫带儿子？赵丽颖录节目尴尬回应</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/7/n13289044.md#1">被封杀42天动向成谜 赵薇现踪林心如IG</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/7/n13289346.md#1">一年来台港两边飞 黄秋生自嘲隔离到发疯</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/8/n13291507.md#1">范冰冰站C位看时装秀 获设计师好友发文感谢</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/8/n13291633.md#1">朱孝天怀疑与妻都曾染疫 自曝两年来收入微薄</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/1/n13274124.md#1">90%以上的病自己会好？提升自愈力有1个关键</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/8/n13289897.md#1">消防队员援救峭壁上的“女人” 结局很意外</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/6/n13285230.md#1">音乐教授到公园练萨克斯 一松鼠成“忠粉”</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/8/n13290207.md#1">在内蒙古草原点外送要等4小时 跑腿费用惊人</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/7/n13287053.md#1">致癌、有毒或无效 哪些干洗手液上了“黑名单”？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bggrdk323/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bggrdk323/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/8/n13290699.htm">悉尼半数以上学区房价格上涨率达两位数</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/8/n13290699.htm">悉尼半数以上学区房价格上涨率达两位数</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/bggrdk323/djy/blob/master/gb/21/10/8/n13290699.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bggrdk323/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bggrdk323/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bggrdk323/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bggrdk323/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bggrdk323/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/10/8/n13290699.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
